testsuite/tests/typecheck/should_fail/tcfail166.stderr

tcfail166.hs:6:13: error: [GHC-25955]
    Illegal symbol ‘forall’ in type
    Suggested fix:
      Use ExplicitForAll
      to enable syntax: forall <tvs>. <type>
